; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3ReportError.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3ReportError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"%s at line %d of [%.10s]\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3ReportError(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i64 (...) @sqlite3_sourceid()
  %11 = add nsw i64 20, %10
  %12 = call i32 @sqlite3_log(i32 %7, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %8, i32 %9, i64 %11)
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local i32 @sqlite3_log(i32, i8*, i8*, i32, i64) #1

declare dso_local i64 @sqlite3_sourceid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
